# api/swagger.yaml
@@ -370,6 +370,18 @@ definitions:
         description: 使用者ID
         type: string
     type: object
+  logins.ForgetPassword:
+    properties:
+      domain:
+        description: 網域
+        type: string
+      email:
+        description: 使用者電子郵件
+        type: string
+    required:
+    - domain
+    - email
+    type: object
   logins.Login:
     properties:
       domain:
@@ -2310,6 +2322,51 @@ paths:
       summary: 更新單一事件標記
       tags:
       - event_mark
+  /forget-password:
+    post:
+      consumes:
+      - application/json
+      description: 忘記密碼
+      parameters:
+      - description: 登入帶入
+        in: body
+        name: '*'
+        required: true
+        schema:
+          $ref: '#/definitions/logins.ForgetPassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 忘記密碼
+      tags:
+      - login
   /holidays:
     get:
       consumes:
